{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 127,
  "lineage": "28e1b00b-4ab3-32fb-0013-993c6c4b1c52",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-047fd33944f88aa5f",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:subnet/subnet-047fd33944f88aa5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 247,
            "cidr_block": "10.40.12.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047fd33944f88aa5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355262196527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-private-us-east-1b",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "vpc_id": "vpc-01308898bef81845c"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-065c1758bfd9cfb8b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:subnet/subnet-065c1758bfd9cfb8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 247,
            "cidr_block": "10.40.11.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065c1758bfd9cfb8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355262196527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-private-us-east-1a",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "vpc_id": "vpc-01308898bef81845c"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a19bcec6d2ec60fb",
            "arn": "arn:aws:ec2:us-east-1:355262196527:instance/i-084f0aeebcc2226d2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "poc-msk-client-ssm-profile",
            "id": "i-084f0aeebcc2226d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-043dc8ac2517f6752",
            "private_dns": "ip-10-40-11-82.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.40.11.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "ManagedBy": "terraform",
                  "Project": "poc-msk",
                  "ResourceGroup": "poc-msk"
                },
                "tags_all": {
                  "ManagedBy": "terraform",
                  "Project": "poc-msk",
                  "ResourceGroup": "poc-msk"
                },
                "throughput": 125,
                "volume_id": "vol-0bdf28ce50b1a4ff8",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-065c1758bfd9cfb8b",
            "tags": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04238a7f56657e478"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile",
            "aws_iam_role.ec2_ssm",
            "aws_security_group.connect_like",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "kui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:355262196527:loadbalancer/app/alb-kafka-ui/984be9cec848b33b",
            "arn_suffix": "app/alb-kafka-ui/984be9cec848b33b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-kafka-ui-1087979592.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:355262196527:loadbalancer/app/alb-kafka-ui/984be9cec848b33b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-kafka-ui",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b455fa77ad2f5153"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04d9373a91ee874cf"
              },
              {
                "subnet_id": "subnet-0f9908f6df7b85a63"
              }
            ],
            "subnets": [
              "subnet-04d9373a91ee874cf",
              "subnet-0f9908f6df7b85a63"
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "vpc_id": "vpc-01308898bef81845c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.kui_alb",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "kui_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:355262196527:listener/app/alb-kafka-ui/984be9cec848b33b/c59c118f9fe18b99",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:355262196527:targetgroup/tg-kafka-ui/c7a41c5fff67da1a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:355262196527:listener/app/alb-kafka-ui/984be9cec848b33b/c59c118f9fe18b99",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:355262196527:loadbalancer/app/alb-kafka-ui/984be9cec848b33b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.kui",
            "aws_lb_target_group.kui",
            "aws_security_group.kui_alb",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "kui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:355262196527:targetgroup/tg-kafka-ui/c7a41c5fff67da1a",
            "arn_suffix": "targetgroup/tg-kafka-ui/c7a41c5fff67da1a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/actuator/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:355262196527:targetgroup/tg-kafka-ui/c7a41c5fff67da1a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:355262196527:loadbalancer/app/alb-kafka-ui/984be9cec848b33b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-kafka-ui",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01308898bef81845c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "connect_like",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:security-group/sg-04238a7f56657e478",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04238a7f56657e478",
            "ingress": [],
            "name": "secGroup-connect-like",
            "name_prefix": "",
            "owner_id": "355262196527",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-01308898bef81845c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kui_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:security-group/sg-0b455fa77ad2f5153",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b455fa77ad2f5153",
            "ingress": [
              {
                "cidr_blocks": [
                  "191.53.178.49/32"
                ],
                "description": "HTTP from my IP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "secGroup-kafka-ui-alb",
            "name_prefix": "",
            "owner_id": "355262196527",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-01308898bef81845c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kui_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:security-group/sg-0eda379e4376a91b0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eda379e4376a91b0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "From ALB on 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b455fa77ad2f5153"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "secGroup-kafka-ui-task",
            "name_prefix": "",
            "owner_id": "355262196527",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-01308898bef81845c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.kui_alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:security-group/sg-0ee97260fd68f89b3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee97260fd68f89b3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Kafka TLS from testing / connect",
                "from_port": 9094,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04238a7f56657e478"
                ],
                "self": false,
                "to_port": 9094
              }
            ],
            "name": "secGroup-msk",
            "name_prefix": "",
            "owner_id": "355262196527",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-01308898bef81845c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.connect_like",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privatelink",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:security-group/sg-0f0759aae3de4a729",
            "description": "SG para o VPC Endpoint (Elastic PrivateLink)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0759aae3de4a729",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.40.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.40.0.0/16"
                ],
                "description": "",
                "from_port": 9243,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9243
              }
            ],
            "name": "secGroup-ess-privatelink",
            "name_prefix": "",
            "owner_id": "355262196527",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-01308898bef81845c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "msk_from_kui_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Kafka TLS from Kafka-UI task (ingress)",
            "from_port": 9094,
            "id": "sgrule-1982024096",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ee97260fd68f89b3",
            "security_group_rule_id": "sgr-0a2758fb7a422001b",
            "self": false,
            "source_security_group_id": "sg-0eda379e4376a91b0",
            "timeouts": null,
            "to_port": 9094,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.connect_like",
            "aws_security_group.kui_alb",
            "aws_security_group.kui_task",
            "aws_security_group.msk",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elastic_privatelink",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:vpc-endpoint/vpce-0d4a684b5a0b872d8",
            "dns_entry": [
              {
                "dns_name": "vpce-0d4a684b5a0b872d8-3jatsyi2.vpce-svc-0e42e1e06ed010238.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d4a684b5a0b872d8-3jatsyi2-us-east-1b.vpce-svc-0e42e1e06ed010238.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d4a684b5a0b872d8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-033635e8e548bd231"
            ],
            "owner_id": "355262196527",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-04238a7f56657e478",
              "sg-0ee97260fd68f89b3",
              "sg-0f0759aae3de4a729"
            ],
            "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-0e42e1e06ed010238",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.40.12.78",
                "subnet_id": "subnet-047fd33944f88aa5f"
              }
            ],
            "subnet_ids": [
              "subnet-047fd33944f88aa5f"
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01308898bef81845c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.connect_like",
            "aws_security_group.msk",
            "aws_security_group.privatelink",
            "data.aws_availability_zones.available",
            "data.aws_subnet.private",
            "data.aws_vpc_endpoint_service.elastic",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:network-acl/acl-0a8da98fbebea219c",
            "default_network_acl_id": "acl-0a8da98fbebea219c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a8da98fbebea219c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "355262196527",
            "subnet_ids": [
              "subnet-047fd33944f88aa5f",
              "subnet-04d9373a91ee874cf",
              "subnet-065c1758bfd9cfb8b",
              "subnet-0f9908f6df7b85a63"
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-default",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-default",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "vpc_id": "vpc-01308898bef81845c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:route-table/rtb-0859853950b60ee3b",
            "default_route_table_id": "rtb-0859853950b60ee3b",
            "id": "rtb-0859853950b60ee3b",
            "owner_id": "355262196527",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-default",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-default",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-01308898bef81845c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:security-group/sg-04a370a031094fcc3",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-04a370a031094fcc3",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "355262196527",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-default",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-default",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "vpc_id": "vpc-01308898bef81845c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009f0938d9d08352f",
            "arn": "arn:aws:ec2:us-east-1:355262196527:elastic-ip/eipalloc-009f0938d9d08352f",
            "association_id": "eipassoc-086836ec194fe7912",
            "domain": "vpc",
            "id": "eipalloc-009f0938d9d08352f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-099c16f130d43d0e0",
            "private_dns": "ip-10-40-1-84.ec2.internal",
            "private_ip": "10.40.1.84",
            "public_dns": "ec2-52-2-185-120.compute-1.amazonaws.com",
            "public_ip": "52.2.185.120",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-us-east-1a",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-us-east-1a",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:internet-gateway/igw-0da88018850b607dc",
            "id": "igw-0da88018850b607dc",
            "owner_id": "355262196527",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "poc-msk",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "poc-msk",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "vpc_id": "vpc-01308898bef81845c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009f0938d9d08352f",
            "association_id": "eipassoc-086836ec194fe7912",
            "connectivity_type": "public",
            "id": "nat-0424ac6c7aad67530",
            "network_interface_id": "eni-099c16f130d43d0e0",
            "private_ip": "10.40.1.84",
            "public_ip": "52.2.185.120",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f9908f6df7b85a63",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-us-east-1a",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-us-east-1a",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01cbf1538ef45ab831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0424ac6c7aad67530",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01cbf1538ef45ab83",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0da88018850b607dc",
            "id": "r-rtb-0ec1fcd0201b315e31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ec1fcd0201b315e3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:route-table/rtb-01cbf1538ef45ab83",
            "id": "rtb-01cbf1538ef45ab83",
            "owner_id": "355262196527",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0424ac6c7aad67530",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-private",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-private",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-01308898bef81845c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:route-table/rtb-0ec1fcd0201b315e3",
            "id": "rtb-0ec1fcd0201b315e3",
            "owner_id": "355262196527",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0da88018850b607dc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-public",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-public",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "timeouts": null,
            "vpc_id": "vpc-01308898bef81845c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8b06f07633af98c",
            "route_table_id": "rtb-01cbf1538ef45ab83",
            "subnet_id": "subnet-065c1758bfd9cfb8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087d20c2e9c741a92",
            "route_table_id": "rtb-01cbf1538ef45ab83",
            "subnet_id": "subnet-047fd33944f88aa5f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c12acdc993fe75d",
            "route_table_id": "rtb-0ec1fcd0201b315e3",
            "subnet_id": "subnet-0f9908f6df7b85a63"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0665c2f71e142f9dc",
            "route_table_id": "rtb-0ec1fcd0201b315e3",
            "subnet_id": "subnet-04d9373a91ee874cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:subnet/subnet-065c1758bfd9cfb8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.40.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065c1758bfd9cfb8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355262196527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-private-us-east-1a",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-private-us-east-1a",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "vpc_id": "vpc-01308898bef81845c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:subnet/subnet-047fd33944f88aa5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.40.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047fd33944f88aa5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355262196527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-private-us-east-1b",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-private-us-east-1b",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "vpc_id": "vpc-01308898bef81845c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:subnet/subnet-0f9908f6df7b85a63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.40.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9908f6df7b85a63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355262196527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-public-us-east-1a",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-public-us-east-1a",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "vpc_id": "vpc-01308898bef81845c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:subnet/subnet-04d9373a91ee874cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.40.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d9373a91ee874cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355262196527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-public-us-east-1b",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "poc-msk-public-us-east-1b",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "vpc_id": "vpc-01308898bef81845c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355262196527:vpc/vpc-01308898bef81845c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.40.0.0/16",
            "default_network_acl_id": "acl-0a8da98fbebea219c",
            "default_route_table_id": "rtb-0859853950b60ee3b",
            "default_security_group_id": "sg-04a370a031094fcc3",
            "dhcp_options_id": "dopt-cea813b4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01308898bef81845c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0859853950b60ee3b",
            "owner_id": "355262196527",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "poc-msk",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "poc-msk",
              "Project": "poc-msk",
              "ResourceGroup": "poc-msk"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}